--- a/cards/Omar_Kalthom.html
+++ b/cards/Omar_Kalthom.html
@@ -241,6 +241,11 @@
             background: rgba(37, 99, 235, 0.1);
             border-color: rgba(37, 99, 235, 0.3);
         }
+
+        .action-button.nfc:hover {
+            background: rgba(139, 92, 246, 0.1);
+            border-color: rgba(139, 92, 246, 0.3);
+        }
         
         .action-button i {
             font-size: 1.2rem;
@@ -420,6 +425,10 @@
             <a href="tel:+962789583229" class="action-button call">
                 <i class="fas fa-phone"></i>
                 Call Now
+            </a>
+            <a href="tel:+962798457949" class="action-button nfc">
+                <i class="fas fa-id-card"></i>
+                NFC Card Request
             </a>
         </div>
     </div>
