--- a/cards/Ezz_El_Din.html
+++ b/cards/Ezz_El_Din.html
@@ -388,7 +388,7 @@
                 <i class="fas fa-phone"></i>
                 Call Now
             </a>
-            <a href="https://www.instagram.com/ezzeldinshlas?igsh=MWJrMTJob2VuZW5pNA==" class="action-button nfc" target="_blank">
+            <a href="https://www.instagram.com/futures_journey_programming_in" class="action-button nfc" target="_blank">
                 <i class="fas fa-id-card"></i>
                 NFC Card Request
             </a>
