--- a/cards/Reem.html
+++ b/cards/Reem.html
@@ -363,7 +363,11 @@
                 <img src="https://i.imgur.com/MltKWPR.jpeg" alt="Reem Ammari" class="profile-image">
             </div>
             <h1 class="profile-name">Reem Ammari</h1>
-            <p class="profile-title">Digital Content Creator</p>
+            <p class="profile-title">Public Figure With 7 Active Social Media Platforms Creating Positive Energy 
+
+                                    Blogger & Advertiser
+
+                                    An experienced English-Arabic Interpreter With 7+ Years In Legal And Medical Settings</p>
         </div>
     </header>
 
