--- a/cards/Hadatha.html
+++ b/cards/Hadatha.html
@@ -341,7 +341,7 @@
                     <i class="fab fa-instagram"></i>
                 </a>
                 
-                <a href="https://www.facebook.com/share/16zT6Fedcb/?mibextid=wwXIfr" class="social-icon" target="_blank">
+                <a href="https://www.facebook.com/share/1ABkBehBc7/" class="social-icon" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
                 
