--- a/cards/Kareem_Hamad.html
+++ b/cards/Kareem_Hamad.html
@@ -476,6 +476,10 @@
                 <i class="fas fa-phone"></i>
                 Call Now
             </a>
+            <a href="https://www.instagram.com/futures_journey_programming_in" class="action-button nfc" target="_blank">
+                <i class="fas fa-id-card"></i>
+                NFC Card Request
+            </a>
         </div>
     </div>
 
