--- a/cards/andalos.html
+++ b/cards/andalos.html
@@ -539,7 +539,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Al Andalus - Lighting & Electrical Solutions. All rights reserved.</p>
+            <p class="footer-text">Al Andalus - Lighting & Electrical Solutions. All rights reserved.</p>
         </div>
     </footer>
 
